--- a/index.html
+++ b/index.html
@@ -4,20 +4,32 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./HAM.css" />
     <title>HAM</title>
+    <script src="./bot.js"></script>
 </head>
 <body>
     <div id="ham-container">
         <div id="ham-game">
             <div id="ham-title">Tic-Ham-Toe</div>
-
+            <div id="status">Your turn!</div>
             <div id="ham-playfield">
                 <span class="row">
-                    <div class="field" id="1">a</div>
-                    <div class="field" id="2">a</div>
-                    <div class="field" id="3">a</div>
+                    <div class="field" id="n1"></div>
+                    <div class="field" id="n2"></div>
+                    <div class="field" id="n3"></div>
+                </span>
+                <span class="row">
+                    <div class="field" id="n4"></div>
+                    <div class="field" id="n5"></div>
+                    <div class="field" id="n6"></div>
+                </span>
+                <span class="row">
+                    <div class="field" id="n7"></div>
+                    <div class="field" id="n8"></div>
+                    <div class="field" id="n9"></div>
                 </span>
             </div> 
         </div>
     </div>
+    <script src="./fields.js"></script>
 </body>
 </html>
